# trader

./: .gitignore  README.md  index.js  package-lock.json  package.json
.run/: Predict.run.xml  Train network.run.xml
nntool/: CMakeLists.txt  NeuralNetwork.js  README.md  main.cpp  nn_example.js  test.cpp
nntool/NeuralNetwork/: CMakeLists.txt  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  input_validation.h  vector_io.cpp  vector_io.h
nntool/nn/: CMakeLists.txt  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  input_validation.h  vector_io.cpp  vector_io.h
trading-data/: .gitignore  main.ipynb
